# DeskDropReco

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  pyproject.toml
notebooks/: 00-mock-feature-stores.ipynb  01-matrix-fact-hyperopt.ipynb  02-xgb-hyper-opt copy.ipynb  04-model-comparisons.ipynb
src/: mf_training_pipeline.py  popularity_training_pipeline.py  predict_api.py  xgb_training_pipeline.py
src/core/: data.py  evaluation.py  loaders.py  model.py  pipelines.py  utils.py
