[tool.poetry]
name = "deskdropreco"
version = "0.1.0"
description = ""
authors = ["Zsombor Teremy <teremyz21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
torch = "^2.5.1"
scikit-learn = "^1.5.2"
xgboost = "^2.1.2"
optuna = "^4.0.0"
pyarrow = "^18.0.0"
fastapi = {extras = ["standard"], version = "^0.115.4"}
pyyaml = "^6.0.2"
python-box = "^7.2.0"
typer = "^0.12.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.7.1"
pre-commit = "^4.0.1"

[tool.poetry.scripts]
popularity_training_pipeline = 'src.popularity_training_pipeline:main'
mf_training_pipeline = 'src.mf_training_pipeline:main'
xgb_training_pipeline = 'src.xgb_training_pipeline:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
